# particula-beta

./: .buildinfo  .gitignore  .gitmodules  404.html  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  search.html  searchindex.js  temp.html  temps.html
.devcontainer/: Dockerfile
.github/workflows/: lint.yml  mkdocs.yml  pypi.yml  test.yml
API/: README.md  index.html
API/particula_beta/: index.html  index.md
API/particula_beta/data/: index.html  index.md
API/particula_beta/lagrangian/: index.html  index.md
API/particula_beta/time_manage/: index.html
Discussions/: index.html
How-To-Guides/: index.html
How-To-Guides/Chamber_Wall_Loss/: index.html
How-To-Guides/Data_Streams_and_Lakes/: index.html
How-To-Guides/Lagrangian/: index.html
How-To-Guides/Light_Scattering/: index.html
How-To-Guides/Setup_Particula/: index.html
Tutorials/: index.html
Tutorials/Data_Analysis/: index.html
Tutorials/Data_Analysis/Converting_Size_Distributions/: index.html
Tutorials/Data_Analysis/Fitting_lognormal_PDFs_2modes/: index.html
contribute/: index.html
contribute/CODE_OF_CONDUCT/: index.html
contribute/CONTRIBUTING/: index.html
docs/.assets/: mk_generator.py
docs/How-To-Guides/Data_Streams_and_Lakes/: index.md
docs/Tutorials/Data_Analysis/: Fitting_lognormal_PDFs_2modes.ipynb
mk_generator/: index.html
next/: index.html
particula_beta/: __init__.py  time_manage.py  units.py
particula_beta/data/: __init__.py  lake.py  lake_stats.py  loader.py  loader_interface.py  loader_setting_builders.py  merger.py  mixin.py  settings_generator.py  stream.py  stream_stats.py
particula_beta/lagrangian/: boundary.py  collisions.py  integration.py  particle_pairs.py  particle_property.py
pr-preview/pr-15/: 404.html  index.html
pr-preview/pr-17/: 404.html
search/: search_index.json
(+299 files in other folders)
