[project]
name = "particula_beta"
description = "Development version of particula, containing new features and functionality."
readme = "readme.md"
requires-python = ">=3.9"
license = {file = "license"}
authors = [
    {name = "Gorkowski", email="Gorkowski@users.noreply.github.com"},
    {name = "ngam", email="ngam@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "atmospheric", "particles", "climate", "aerosol", "particulate",
    "particula", "instruments", "optics", "scattering", "absorption",
    "new particle formation", "nucleation", "growth", "coagulation",
    "aerosol cloud interactions", "aerosol radiation interactions",
]

dependencies = [
    "particula",
    "numpy", "scipy<1.14.0", "pint", "hypersolver==0.0.8", "pandas",
    "netCDF4", "shapely", "PyMieScatt", "tqdm", "pytz",
    "matplotlib", "torch", "scikit-learn"
]

# This is set automatically by flit using `particula_beta.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/uncscode/particula-beta"
repository = "https://github.com/uncscode/particula-beta"

[project.optional-dependencies]
dev = [
    "pylint", "pytest", "autopep8", "jupyterlab",
    "typing", "build", "flake8", "jupyter-book", "ghp-import",
    "matplotlib", "pandas", "netCDF4", "shapely", "PyMieScatt",
    "tqdm", "pytz", "torch", "mkdocs-material", "handsdown",
    "mkdocs-jupyter", "black[jupyter]",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
